<resources>
    <string name="app_name">FitZone</string>
    <string name="action_donate">Transfer</string>
    <string name="action_report">Report</string>
    <string name="Title">FitZone</string>
    <string name="button_addImage"> Add Image </string>
    <string name="SubHeading">Add Favourite Meal</string>
    <string name="Meals">View Favourite Meals</string>
    <string name="SubmitButton">Enter</string>
    <string name="enter_desc">Please Enter a description</string>
    <string name="choose_img">choose an image</string>
    <string name="amount">Calories</string>
    <string name="name">Please Enter Food/Drink Name</string>
    <string name="description">Please Enter Description</string>
    <string name="date">Show Dialog</string>
    <string name="desc">Creamy chicken and vegetable stir fry</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar"></string>
    <string name="test13">Open</string>
    <string name="reportTitle">Transfer Report</string>
    <string name="enter_amount">Enter Calories</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="test">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_view">View</string>
    <string name="menu_about">About Us</string>
    <string name="menu_thirdoption">Open</string>

    <string name="test11">Test</string>
    <string name="test14">Test</string>


    <string name="aboutus_title">TransferHub</string>
    <string name="aboutus_message">TransferHub is a quick and easy way to transfer money. Wherever you are! With a transfer time of under five seconds per transfer, transferHub is the fastest transfer app on the market.
    our customer service are here to assist you 24/7.</string>

    <string name="messageLoading">Please wait while we Connect to the Server...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_pet_image">Choose Image</string>
    <string name="change_meal_image">Change Image</string>

    <string name="save_meals">Please Save</string>
</resources>
