<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donate"
            android:icon="@mipmap/transfer"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_report"
            android:icon="@mipmap/time"
            android:title="@string/menu_view" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@mipmap/nav_foreground"
            android:title="@string/menu_thirdoption" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@mipmap/page"
            android:title="@string/menu_about" />
    </group>



</menu>
