<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButton"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/MealZoneSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bangers"
        android:text="@string/SubHeading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorText"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />


    <EditText
        android:id="@+id/AddDescription"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorButton2"
        android:ems="10"
        android:fontFamily="@font/bangers"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="@color/colorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorText"
        android:fontFamily="@font/bangers"
        android:inputType="none"
        android:paddingRight="15dp"
        android:text="@string/SubmitButton"
        android:textColor="@color/colorButton"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bangers"
        android:text="@string/amount"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@+id/calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calories"
        app:layout_constraintVertical_bias="0.673" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:src="@mipmap/logo2_foreground"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />





    <EditText
        android:id="@+id/calories"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="21dp"
        android:autofillHints="Please Enter an Amount"
        android:background="@color/colorButton2"
        android:ems="10"
        android:fontFamily="@font/bangers"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/enterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/amount"
        app:layout_constraintTop_toBottomOf="@+id/AddDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>